# aury-boot

./: .gitignore  404.html  CHANGELOG.md  FOUNDATION_KIT_MISSING_FEATURES.md  README.md  TODO.md  build.sh  index.html  publish.sh  pyproject.toml
.cursor/rules/: aurimyth-foundation-kit-rule.mdc  aury-boot-rule.mdc
.github/workflows/: docs.yml
00-quick-start/: index.html
01-intro-detailed/: index.html
02-installation-guide/: index.html
03-server-deployment/: index.html
04-project-structure/: index.html
05-configuration-advanced/: index.html
06-di-container-complete/: index.html
07-middleware-guide/: index.html
08-components-detailed/: index.html
09-http-advanced/: index.html
10-error-handling-guide/: index.html
11-transaction-management/: index.html
12-database-complete/: index.html
13-caching-advanced/: index.html
14-async-tasks-guide/: index.html
15-events-driven/: index.html
16-scheduler-guide/: index.html
17-rpc-microservices/: index.html
18-websocket-guide/: index.html
19-storage-guide/: index.html
20-i18n-guide/: index.html
21-migration-guide/: index.html
22-logging-complete/: index.html
23-best-practices/: index.html
24-cli-commands/: index.html
25-scaffold-guide/: index.html
26-infrastructure-advanced/: index.html
aurimyth/foundation_kit/: __init__.py  base_models.py  errors.py  response.py  schemas.py
aurimyth/foundation_kit/adapters/: __init__.py  clients.py  gateways.py  third_party_clients.py
aurimyth/foundation_kit/application/: __init__.py  app.py  constants.py  container.py  events.py  examples.py  migrations.py  scheduler.py  transaction.py
aurimyth/foundation_kit/application/app/: __init__.py  base.py  components.py
aurimyth/foundation_kit/application/config/: __init__.py  settings.py
aurimyth/foundation_kit/application/constants/: __init__.py  components.py
aurimyth/foundation_kit/application/errors/: codes.py  exceptions.py  handlers.py
aurimyth/foundation_kit/application/interfaces/: __init__.py  egress.py  errors.py  ingress.py
aurimyth/foundation_kit/application/middleware/: __init__.py  logging.py
aurimyth/foundation_kit/application/migrations/: __init__.py  manager.py
aurimyth/foundation_kit/application/rpc/: client.py  registry.py
aurimyth/foundation_kit/application/server/: __init__.py
aurimyth/foundation_kit/commands/: __init__.py  cli.py
aurimyth/foundation_kit/commands/migrate/: app.py  commands.py
aurimyth/foundation_kit/commands/server/: __init__.py  app.py
aurimyth/foundation_kit/common/: __init__.py  exceptions.py  logging.py
aurimyth/foundation_kit/common/i18n/: __init__.py  translator.py
aurimyth/foundation_kit/common/logging/: __init__.py
aurimyth/foundation_kit/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  migrations.py  models.py  repository.py  scheduler.py  service.py  tasks.py
aurimyth/foundation_kit/core/storage/: __init__.py  base.py  s3.py
aurimyth/foundation_kit/domain/models/: __init__.py  models.py
aurimyth/foundation_kit/domain/pagination/: __init__.py
aurimyth/foundation_kit/domain/repository/: __init__.py  impl.py  interface.py  query_builder.py
aurimyth/foundation_kit/domain/transaction/: __init__.py
aurimyth/foundation_kit/infrastructure/: __init__.py
aurimyth/foundation_kit/infrastructure/cache/: __init__.py  backends.py  base.py  exceptions.py  factory.py  manager.py
aurimyth/foundation_kit/infrastructure/database/: __init__.py  config.py  exceptions.py  manager.py  settings.py
aurimyth/foundation_kit/infrastructure/events/: __init__.py  bus.py  config.py  models.py  settings.py
aurimyth/foundation_kit/infrastructure/repository/: __init__.py  decorators.py  upsert_strategies.py
aurimyth/foundation_kit/infrastructure/scheduler/: __init__.py  exceptions.py  manager.py
aurimyth/foundation_kit/infrastructure/storage/: __init__.py  base.py  exceptions.py  factory.py  s3.py
aurimyth/foundation_kit/infrastructure/tasks/: __init__.py  config.py  exceptions.py  manager.py  settings.py
aurimyth/foundation_kit/models/: __init__.py
aurimyth/foundation_kit/models/common/: __init__.py
aurimyth/foundation_kit/repositories/: __init__.py  base.py
aurimyth/foundation_kit/rpc/: __init__.py  base.py  client.py  registry.py
aurimyth/foundation_kit/services/: __init__.py  base.py
aurimyth/foundation_kit/testing/: __init__.py  base.py  factory.py
aurimyth/foundation_kit/toolkit/: __init__.py  http_client.py
aurimyth/foundation_kit/utils/: __init__.py  chat.py  container.py  events.py  http_client.py  jwt.py  logging.py  security.py  transaction.py
aury/: __init__.py
aury/boot/: _version.py
aury/boot/application/: __init__.py
aury/boot/application/adapter/: http.py
aury/boot/application/app/: base.py  components.py
aury/boot/application/config/: __init__.py  multi_instance.py  settings.py
aury/boot/commands/: docs.py  init.py  pkg.py  scheduler.py  worker.py
aury/boot/infrastructure/: __init__.py  redis_sentinel.py
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_STANDARDS.md  USER_GUIDE.md
docs/user_manual/: mkdocs.yml
docs/user_manual/docs/: 00-quick-start.md  01-intro-detailed.md  02-installation-guide.md  03-server-deployment.md  04-project-structure.md  05-configuration-advanced.md  06-di-container-complete.md  07-middleware-guide.md  08-components-detailed.md  09-http-advanced.md  10-error-handling-guide.md  11-transaction-management.md  12-database-complete.md  13-caching-advanced.md  14-async-tasks-guide.md  15-events-driven.md  16-scheduler-guide.md  17-rpc-microservices.md  18-websocket-guide.md  19-storage-guide.md  20-i18n-guide.md  21-migration-guide.md  22-logging-complete.md  23-best-practices.md  24-cli-commands.md  25-scaffold-guide.md  26-infrastructure-advanced.md  27-adapter-guide.md  index.md
search/: search_index.json
tests/: test_alerting_span_processor.py  test_otel_sitecustomize.py  test_postgres_compat.py  test_redis_sentinel_client_adapter.py  test_repository_optimistic_lock.py  test_scheduler_sentinel_jobstore.py
(+78 files in other folders)
