[project]
name = "aurimyth-foundation-kit"
version = "0.1.0"
description = "AuriMyth Foundation Kit - 核心基础架构工具包"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.2.0",
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "dramatiq>=1.18.0",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aurimyth.foundation_kit"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"